[package]
name = "min-root-plonky2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2= {git="https://github.com/mir-protocol/plonky2"}
plonky2_ecdsa= {git="https://github.com/mir-protocol/plonky2"}
anyhow="1.0"
num-bigint = "0.4.3"
hashbrown = "0.13.2"
